--- a/src/content/docs/ja/contribute.mdx
+++ b/src/content/docs/ja/contribute.mdx
@@ -16,7 +16,7 @@ Astro Docsウェブサイトに貢献する方法はたくさんあります！
 
 Astro Docsウェブサイトは… Astroウェブサイトです！これをメンテナンスするためには、文書コンテンツだけでなく、Astroコードのメンテナンスや、a11y、CSS、UI、UXに関する問題への対処が必要です。また、ドキュメントを複数の言語で提供しているため、サイト全体を翻訳するための援助が必要です。
 
-PRにレビューコメントを残したり、既存のGitHub IssuesやDiscussionsにアイデアを追加したり、「ピン止め」されたissueのメンテナンスタスクに参加したりすることで、大きな貢献をすることもできます！
+PRにレビューコメントを残したり、既存のGitHub IssuesやDiscussionsにアイデアを追加したり、「ピン止め」されたissueのメンテナンスタスクに参加したりすることで、大きな貢献ができます！
 
 すべてのPR、特に翻訳のPRにはレビュアーが必要です！PRをレビューしてコメントや提案、承認を意味する「LGTM！」（「Looks Good To Me!」）を残すことは、Team Docsを開始し、Astroについてより詳しく学ぶための最適な方法です。
 
