--- a/src/content/docs/ja/contribute.mdx
+++ b/src/content/docs/ja/contribute.mdx
@@ -14,7 +14,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Astro Docsウェブサイトに貢献する方法はたくさんあります！
 
-Astro Docsウェブサイトは… Astroウェブサイトです！これをメンテナンスするためには、文書コンテンツだけでなく、Astroコードのメンテナンスや、a11y、CSS、UI、UXに関する問題への対処が必要です。また、ドキュメントを複数の言語で提供しているため、サイト全体を翻訳するための援助が必要です。
+Astro Docsウェブサイトは… Astroウェブサイトです！これをメンテナンスするためには、文書コンテンツだけでなく、Astroコードのメンテナンスや、a11y、CSS、UI、UXに関する問題への対処が必要です。また、ドキュメントを複数の言語で提供しているため、サイト全体の翻訳を手伝ってもらう必要があります。
 
 PRにレビューコメントを残したり、既存のGitHub IssuesやDiscussionsにアイデアを追加したり、「ピン止め」されたissueのメンテナンスタスクに参加したりすることで、大きな貢献ができます！
 
