add: translation pt.2

--- a/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -21,7 +21,7 @@ Nuxt y Astro comparten algunas similitudes que te ayudarán a migrar tu proyecto
 - Los proyectos de Astro también pueden ser SSG o [SSR con prerenderizado a nivel de página](/es/guides/server-side-rendering/#renderizado-híbrido).
 - Astro usa un enrutamiento basado en archivos y [permite que las páginas con nombres creen rutas dinámicas](/es/core-concepts/routing/#rutas-dinámicas)
 - Astro es [basado en componentes](/es/core-concepts/astro-components/) y la estructura de tu marcado será similar antes y después de tu migración.
-- Astro tiene [una integración oficial para usar componentes de Vue](/en/guides/integrations-guide/vue/).
+- Astro tiene [una integración oficial para usar componentes de Vue](/es/guides/integrations-guide/vue/).
 - Astro tiene soporte para [instalar paquetes de NPM](/es/guides/imports/#npm-packages), incluyendo librerías de Vue. Puedes mantener algunos o todos tus componentes y dependencias de Vue existentes.
 
 ## Principales diferencias entre Nuxt y Astro
@@ -67,37 +67,37 @@ Puedes pasar un argumento `--template` al comando `create astro` para iniciar un
   <PackageManagerTabs>
     <Fragment slot="npm">
     ```shell
-    # launch the Astro CLI Wizard 
+    # lanzar el Asistente de línea de comandos de Astro
     npm create astro@latest
 
-    # create a new project with an official example
+    # crea un nuevo proyecto con un ejemplo oficial
     npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
     <Fragment slot="pnpm">
     ```shell
-    # launch the Astro CLI Wizard 
+    # lanzar el Asistente de línea de comandos de Astro
     pnpm create astro@latest
 
-    # create a new project with an official example
+    # crea un nuevo proyecto con un ejemplo oficial
     pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
     <Fragment slot="yarn">
     ```shell
-    # launch the Astro CLI Wizard 
+    # lanzar el Asistente de línea de comandos de Astro
     yarn create astro@latest
 
-    # create a new project with an official example
+    # crea un nuevo proyecto con un ejemplo oficial
     yarn create astro@latest --template <example-name>
     ```
     </Fragment>
   </PackageManagerTabs>
 
-Then, copy your existing Nuxt project files over to your new Astro project in a separate folder outside of `src`.
+Luego, copia tus archivos de proyecto Nuxt existentes a tu nuevo proyecto Astro en una carpeta separada fuera de `src`.
 
 :::tip
-Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox, or Gitpod.
+Visita https://astro.new para ver la lista completa de plantillas de inicio oficiales y enlaces para abrir un nuevo proyecto en StackBlitz, CodeSandbox o Gitpod.
 :::
 
 ### Instalar integraciones (opcional)
@@ -132,14 +132,13 @@ Aqui hay algunos consejos para convertir un componente `.vue` de Nuxt en un comp
 
 4. Utiliza `Astro.props` para acceder a cualquier prop adicional que se pasaba anteriormente a tu componente Vue.
 
-5. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing Vue components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 5. Decide si algún componente importado también necesita ser convertido a Astro. Con la integración oficial instalada, puedes [usar componentes Vue existentes en tu archivo Astro](/es/guides/integrations-guide/vue/). Pero, es posible que desees convertirlos a Astro, ¡especialmente si no necesitan ser interactivos!
 
-See [an example from a Nuxt app converted step-by-step](#guided-example-see-the-steps).
+Ve [un ejemplo de una aplicación Nuxt convertida paso a paso](#ejemplo-guiado-ver-los-pasos).
 
-#### Compare: Vue vs Astro
+#### Comparar: Vue vs Astro
 
-Compare the following Nuxt component and a corresponding Astro component:
+Compara el siguiente componente de Nuxt con un componente de Astro: 
 
 <AstroVueTabs>
   <Fragment slot="vue">
@@ -217,13 +216,13 @@ Compare the following Nuxt component and a corresponding Astro component:
   </Fragment>
 </AstroVueTabs>
 
-### Migrating Layout Files
+### Migrando Archivos de Diseño
 
-You may find it helpful to start by converting your Nuxt layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
+Puede resultarte útil comenzar convirtiendo tus diseños y plantillas de Nuxt en [componentes de diseño de Astro](/es/core-concepts/layouts/).
 
-Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present. Your Nuxt `layout.vue` and templates will not include these.
+Cada página de Astro requiere explícitamente que las etiquetas `<html>`, `<head>` y `<body>` estén presentes. Tu `layout.vue` y plantillas de Nuxt no incluirán estas.
 
-Note the standard HTML templating, and direct access to `<head>`:  
+Ten en cuenta la plantilla HTML estándar y el acceso directo a `<head>`:
 
 ```astro title="src/layouts/Layout.astro"
 <html lang="en">
@@ -234,27 +233,27 @@ Note the standard HTML templating, and direct access to `<head>`:
     <title>Astro</title>
   </head>
   <body>
-    <!-- Wrap the slot element with your existing layout templating -->
+    <!-- Envuelve el elemento slot con el diseño existente de plantilla -->
     <slot />
   </body>
 </html>
 ```
 
-You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site metadata. Notice that Astro uses neither `vue-meta` nor a component's `head` property but instead creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
+También puede que desees reutilizar el código de [la propiedad `head` de la página de Nuxt](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) para incluir metadatos adicionales del sitio. Ten en cuenta que Astro no usa ni `vue-meta` ni la propiedad `head` de un componente, sino que crea `<head>` directamente. Puedes importar y usar componentes, incluso dentro de `<head>`, para separar y organizar el contenido de tu página.
 
-### Migrating Pages and Posts
+### Migrando Páginas y Publicaciones
 
-In NuxtJS, your [pages](/en/core-concepts/astro-pages/) live in `/pages`. In Astro, **all your page's content must live within `src/pages` or `src/content`**.
+En NuxtJS, tus [páginas](/es/core-concepts/astro-pages/) viven en `/pages`. En Astro, **todo el contenido de tu página debe vivir dentro de `src/pages` o `src/content`**.
 
-#### Vue Pages
+#### Páginas de Vue
 
-Your existing Nuxt Vue (`.vue`) pages will need to be [converted from Vue files to `.astro` pages](#convert-vue-sfc-pages-to-astro-files). You cannot use an existing Vue page file in Astro.
+Tus páginas Vue existentes (`.vue`) de Nuxt deberán [convertirse de archivos Vue a páginas `.astro`](#conviertir-páginas-vue-sfc-a-archivos-astro). No puedes usar un archivo de página Vue existente en Astro.
 
-These [`.astro` pages](/en/core-concepts/astro-pages/) must be located within `src/pages/` and will have page routes generated automatically based on their file path.
+Estas [páginas `.astro`](/es/core-concepts/astro-pages/) deben estar ubicadas dentro de `src/pages/` y tendrán rutas de página generadas automáticamente en función de su ruta de archivo.
 
-##### Dynamic File Path Naming
+##### Nombres de ruta de archivo dinámico
 
-In Nuxt, your dynamic pages use an underscore to represent a dynamic page property that's then passed to the page generation:
+En Nuxt, tus páginas dinámicas usan un guión bajo para representar una propiedad de página dinámica que luego se pasa a la generación de la página:
 
 <FileTree>
 - pages/
@@ -264,7 +263,7 @@ In Nuxt, your dynamic pages use an underscore to represent a dynamic page proper
 - nuxt.config.js
 </FileTree>
 
-To convert to Astro, change this underscored dynamic path property (e.g. `_name.vue`) to be wrapped in a pair of square brackets (e.g. `[name].astro`):
+Para convertir a Astro, cambia esta propiedad de ruta dinámica subrayada (por ejemplo, `_name.vue`) para que esté envuelta en un par de corchetes (por ejemplo, `[name].astro`):
 
 <FileTree>
 - src/
@@ -276,25 +275,25 @@ To convert to Astro, change this underscored dynamic path property (e.g. `_name.
 </FileTree>
 
 
-#### Markdown and MDX pages
+#### Páginas de Markdown y MDX
 
-Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing Markdown and MDX pages, but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). 
+Astro tiene soporte incorporado para Markdown y una integración opcional para archivos MDX. Puedes reutilizar cualquier página Markdown y MDX existente, pero puede que requieran algunos ajustes en su frontmatter, como agregar [la propiedad especial `layout` del frontmatter de Astro](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
-You will no longer need to manually create pages for each Markdown-generated route or use an external package like `@nuxt/content`. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
+Ya no necesitarás crear manualmente páginas para cada ruta generada por Markdown o usar un paquete externo como `@nuxt/content`. Estos archivos se pueden colocar dentro de `src/pages/` para aprovechar el enrutamiento automático basado en archivos.
 
-When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-routes-from-content).
+Cuando forma parte de una [colección de contenido](/es/guides/content-collections/), los archivos Markdown y MDX vivirán en carpetas dentro de `src/content/` y [generarás esas páginas dinámicamente](/es/guides/content-collections/#generating-routes-from-content).
 
-### Migrating Tests
+### Migrando Tests
 
-As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box, if you have been able to match the markup of your Nuxt site. Testing libraries such as Jest and Vue Testing Library can be imported and used in Astro to test your Vue components.
+Como Astro genera HTML sin procesar, es posible escribir tests de extremo a extremo utilizando la salida del paso de compilación. Cualquier prueba de extremo a extremo escrita anteriormente podría funcionar de inmediato, si has podido hacer coincidir el marcado de tu sitio Nuxt. Las bibliotecas de pruebas como Jest y Vue Testing Library se pueden importar y usar en Astro para probar tus componentes Vue.
 
-See Astro's [testing guide](/en/guides/testing/) for more.
+Ver más en la [guía de pruebas de Astro](/es/guides/testing/).
 
 ## Referencia: Convertir la sintaxis de NuxtJS a Astro
 
-### Nuxt Local Variables to Astro
+### Variables locales de Nuxt a Astro
 
-To use local variables in an Astro component's HTML, change the set of two curly braces to one set of curly braces:
+Para usar variables locales en un componente de Astro HTML, cambia el conjunto de dos llaves a un conjunto de llaves:
 
 ```astro title="src/components/Component.astro" del={3} add={4}
 ---
@@ -304,9 +303,9 @@ const message = "Hello!"
 <p>{message}</p>
 ```
 
-### Nuxt Property Passing to Astro
+### Pasar propiedades de Nuxt a Astro
 
-To bind an attribute or component property in an Astro component, change this syntax to the following:
+Para vincular un atributo o una propiedad de componente en un componente de Astro, cambia la sintaxis a la siguiente:
 
 ```astro title="src/components/Component.astro" del={3-7} ins={9-11}
 ---
@@ -322,16 +321,16 @@ To bind an attribute or component property in an Astro component, change this sy
 <Header title={"Page"}/>
 ```
 
-### Nuxt Links to Astro
+### Enlaces de Nuxt a Astro
 
-Convert any Nuxt `<NuxtLink to="">` components to HTML `<a href="">` tags. 
+Convierte cualquiere componente `<NuxtLink to="">` de Nuxt a etiquetas HTML `<a href="">`.
 
 ```astro del={1} ins={2}
 <NuxtLink to="/blog">Blog</Link>
 <a href="/blog">Blog</a>
 ```
 
-Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
+Astro no usa ningún componente especial para los enlaces, aunque puedes crear componentes de enlace personalizados. Luego puedes importar y usar este `<Link>` como lo harías con cualquier otro componente.
 
 ```astro title="src/components/Link.astro"
 ---
@@ -340,9 +339,11 @@ const { to } = Astro.props
 <a href={to}><slot /></a>
 ```
 
-### Nuxt Imports to Astro
+### Importaciones de Nuxt a Astro
 
-If necessary, update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
+Si es necesario, actualiza cualquier [importación de archivo](/es/guides/imports/) para hacer referencia exacta a las rutas de archivo relativas. Esto se puede hacer usando [alias de importación](/es/guides/typescript/#alias-de-importación) o escribiendo una ruta relativa completa.
+
+```astro title="src/components/Component.astro" del={1} ins={2}
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
@@ -353,27 +354,27 @@ import Card from `../../components/Card.astro`;
 <Card />
 ```
 
-### Nuxt Dynamic Page Generation to Astro
+### Generación de páginas dinámicas de Nuxt a Astro
 
-In Nuxt, to generate a dynamic page you either must:
+En Nuxt, para generar una página dinámica, debes:
 
-- Use SSR.
-- [Use the `generate` function in `nuxt.config.js`](https://nuxtjs.org/docs/configuration-glossary/configuration-generate/) to define all possible static routes.
+- Usar renderizado del lado del servidor (SSR).
+- [Usar la función `generate` en `nuxt.config.js`](https://nuxtjs.org/docs/configuration-glossary/configuration-generate/) para definir todas las rutas estáticas posibles.
 
-In Astro, you similarly have two choices: 
-- [Use SSR](/en/guides/server-side-rendering/).
-- Export a `getStaticPaths()` function in the frontmatter of an Astro page to tell the framework which [static routes to generate dynamically](/en/core-concepts/routing/#dynamic-routes).
+En astro, similarmente tienes dos opciones: 
+- [Usar renderizado del lado del servidor (SSR)](/es/guides/server-side-rendering/).
+- Exporta una función `getStaticPaths()` en el frontmatter de una página de Astro para indicarle al framework qué [rutas estáticas generar dinámicamente](/es/core-concepts/routing/#dynamic-routes).
 
-#### Convert a `generate` function in Nuxt to a `getStaticPaths` function in Astro.
+#### Convertir una función `generate` en Nuxt a una función `getStaticPaths` en Astro.
 
-To generate multiple pages, replace the function to create routes in your `nuxt.config.js` with `getStaticPaths()` directly inside a dynamic routing page itself:
+Para generar varias páginas, reemplaza la función para crear rutas en tu `nuxt.config.js` con `getStaticPaths()` directamente dentro de una página de enrutamiento dinámico:
 
 ```javascript title="nuxt.config.js"
 {
 	// ...
     generate: {
         async routes() {
-          // Axios is required here unless you're using Node 18
+          // Axios es requerido aquí a menos que estés usando Node 18
           const res = await axios.get("https://pokeapi.co/api/v2/pokemon?limit=151")
           const pokemons = res.data.results;
           return pokemons.map(pokemon => {
@@ -396,19 +397,20 @@ export const getStaticPaths = async () => {
 }
 // ...
 ---
-<!-- Your template here -->
+<!-- Tu plantilla aquí -->
 ```
 
 ### Obtención de datos de Nuxt a Astro
 
-Nuxt has two methods of fetching server-side data:
+Nuxt tiene dos métodos para obtener datos del lado del servidor:
 
-- [`asyncData` options API](https://nuxtjs.org/docs/features/data-fetching/#async-data)
+- [opciones API de `asyncData`](https://nuxtjs.org/docs/features/data-fetching/#async-data)
 - [`fetch` hook](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
+- [gancho `fetch`](https://nuxtjs.org/docs/features/data-fetching/#the-fetch-hook)
 
-In Astro, fetch data inside of your page's code fence.
+En Astro, obtén datos dentro de la valla de código de tu página.
 
-Migrate the following:
+Migra lo siguiente:
 
 ```vue title="pages/index.vue"
 {
@@ -438,7 +440,7 @@ const pokemons = resJson.results;
 
 ### Nuxt Styling to Astro
 
-Nuxt utilizes Vue's component styling to generate a page's style.
+Nuxt utiliza el estilo de los componentes de Vue para generar el estilo de una página.
 
 ```vue title="pages/index.vue"
 <template>
@@ -456,11 +458,11 @@ Nuxt utilizes Vue's component styling to generate a page's style.
 </style>
 ```
 
- Similarly, in Astro you can drop in a `<style>` element in your page's template to provide scoped styles to the component.
+ Similarmente, en Astro puedes poner en una etiqueta `<style>` en la plantilla de tu página para proporcionar estilos con alcance al componente.
 
 ```astro title="src/pages/index.vue"
 ---
-// Your server logic here
+// La lógica del servidor aquí
 ---
 
 <style>
@@ -470,9 +472,10 @@ Nuxt utilizes Vue's component styling to generate a page's style.
 </style>
 ```
 
-#### Global Styling
+#### Estilo global
 
 `<style>`  tags are `scoped` by default in Astro. To make a `<style>` tag global, mark it with the `is:global` attribute:
+Las etiquetas `<style>` son `scoped` (delimitadas) de forma predeterminada en Astro. Para hacer que una etiqueta `<style>` sea global, márcala con el atributo `is:global`:
 
 ```astro title="src/pages/index.vue"
 <style is:global> 
@@ -484,15 +487,16 @@ Nuxt utilizes Vue's component styling to generate a page's style.
 
 
 
-#### Pre-processor support
+#### Soporte de preprocesadores
+6
+[Astro admite los preprocedaores de CSS más populares](/es/guides/styling/#preprocesadores-css) instalandolos como una dependencia de desarrollo. Por ejemplo, para usar SCSS:
 
-[Astro supports the most popular CSS preprocessors](/en/guides/styling/#css-preprocessors) by installing them as a dev dependency. For example, to use SCSS:
 
 ```shell
 npm install -D sass
 ```
 
-After doing so, you're then able to use `.scss` or `.sass` styled without modification from your Vue components.
+Después de hacerlo, puedes usar estilos `.scss` o `.sass` sin modificación desde tus componentes Vue.
 
 ```astro title="src/layouts/Layout.astro"
 <p>Hello, world</p>
@@ -507,13 +511,13 @@ p {
 </style>
 ```
 
-See more about [Styling in Astro](/en/guides/styling/).
+Ve más sobre [Estilos en Astro](/es/guides/styling/).
 
-### Nuxt Image Plugin to Astro
+### Plugin de imagen de Nuxt a Astro
 
-Convert any [Nuxt `<nuxt-img/>` or `<nuxt-picture/>` components](https://image.nuxtjs.org/components/nuxt-img) to [Astro's own image integration components](/en/guides/images/#astros-image-integration), or to a standard HTML `<img>` tag. 
+Convierte cualquier [componente `<nuxt-img/>` o `<nuxt-picture/>` de Nuxt](https://image.nuxtjs.org/components/nuxt-img) a [la integración de imagen de Astro](/es/guides/images/#integración-image-de-astro) o a una etiqueta HTML `<img>` estándar.
 
-See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Nuxt's attributes. 
+Ve una [lista completa de atributos de componentes](/es/guides/integrations-guide/image/#uso) disponibles para los componentes `<Image />` y `<Picture />` de Astro, y ten en cuenta que varios serán diferentes a los atributos de Nuxt.
 
 ```astro title="src/pages/index.astro"
 ---
@@ -525,19 +529,20 @@ import rocket from '../images/rocket.svg';
 <img src={rocket} alt="A rocketship in space.">
 ```
 
-In Vue (`.vue`) components within your Astro app, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
+En los componentes Vue (`.vue`) dentro de tu aplicación Astro, usa la sintaxis de imagen JSX estándar (`<img />`). Astro no optimizará estas imágenes, pero puedes instalar y usar paquetes NPM para tener más flexibilidad.
 
-You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
+Puedes aprender más sobre [el uso de imágenes en Astro](/es/guides/images/) en la guía de imágenes.
 
-## Guided example: See the steps!
+## Ejemplo guiado: ¡Ve los pasos!
 
-Here is an example of Nuxt Pokédex data fetch converted to Astro.
+Aquí hay un ejemplo de la obtención de datos de un Pokédex hecho con Nuxt migrado a Astro.
 
-`pages/index.vue` fetches and displays a list of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
+`pages/index.vue` obtiene y muestra una lista de los primeros 151 Pokémon usando [la REST PokéAPI](https://pokeapi.co/).
 
-Here's how to recreate that in `src/pages/index.astro`, replacing `asyncData()` with `fetch()`.
 
-1. Identify the `<template>` and `<style>` in the Vue SFC.
+Aquí está cómo recrearlo en `src/pages/index.astro`, reemplazando `asyncData()` con `fetch()`.
+
+1. Identifica las etiquetas `<template>` y `<style>` en el SFC de Vue.
 
 ```jsx title="pages/index.vue" {2-13,47-55}
 <template>
@@ -597,21 +602,21 @@ export default Vue.extend({
 </style>
 ```
 
-2. Create `src/pages/index.astro`
+2. Crea `src/pages/index.astro`
 
-Use the `<template>` and `<style>` tags of the Nuxt SFC. Convert any Nuxt or Vue syntax to Astro.
+Usa las etiquetas `<template>` y `<style>` del SFC de Nuxt. Convierte cualquier sintaxis de Nuxt o Vue a Astro.
 
-Note that:
+Ten en cuenta que:
 
-- `<template>` is removed
+- la etiqueta `<template>` es eliminada
 
-- `<style>` has its `scoped` attribute removed
+- la etiqueta `<style>` tiene su atributo `scoped` eliminado
 
-- `v-for` becomes `.map`.
+- `v-for` se convierte en `.map`.
 
-- `:attr="val"` becomes `attr={val}`
+- `:attr="val"` se convierte en `attr={val}`
 
-- `<NuxtLink>` becomes `<a>`.
+- la etiqueta `<NuxtLink>` se convierte en `<a>`.
 
 - The `<> </>` fragment is not required in Astro templating.
 
@@ -641,13 +646,13 @@ Note that:
 </style>
 ```
 
-3. Add any needed imports, props and JavaScript
+3. Agrega cualquier importación, propiedad y JavaScript necesario
 
-Note that:
+Ten en cuenta que:
 
-- The `asyncData` function is no longer needed. Data from the API is fetched directly in the code fence.
-- A `<Layout>` component is imported, and wraps the page templating.
-  - Our `head()` Nuxt method is passed to the `<Layout>` component, which is passed to the `<title>` element as a property.
+- La función `asyncData` no es necesaria. Los datos de la API se obtienen directamente en la valla de código.
+- Un componente `<Layout>` es importado y envuelve la plantilla de la página.
+  - Nuestro método `head()` de Nuxt se pasa al componente `<Layout>`, que se pasa al elemento `<title>` como propiedad.
 
 ```astro ins={2,4-16,19,31} title="src/pages/index.astro"
 ---
@@ -693,6 +698,6 @@ const pokemons = resJson.results.map(pokemon => {
 </style>
 ```
 
-## Community Resources 
+## Recursos de la comunidad
 
-- Blog Post: [From Nuxt to Astro - rebuilding with Astro](https://dev.to/lindsaykwardell/from-nuxt-to-astro-rebuilding-with-astro-5ann)
+- Artículo de Blog: [De Nuxt a Astro - reconstruyendo con Astro](https://dev.to/lindsaykwardell/from-nuxt-to-astro-rebuilding-with-astro-5ann)
