--- a/src/content/docs/es/guides/migrate-to-astro/from-gitbook.mdx
+++ b/src/content/docs/es/guides/migrate-to-astro/from-gitbook.mdx
@@ -9,7 +9,7 @@ i18nReady: false
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-[Gitbook](https://gitbook.com) es una plataforma basada en la web para crear y publicar documentación y libros de manera colaborativa, con integración de control de versiones y funciones personalizables.
+[Gitbook](https://gitbook.com) es una plataforma basada en la web para crear, publicar documentación y libros de manera colaborativa, con integración de control de versiones y funciones personalizables.
 
 
 ## Principales similitudes entre GitBook y Astro
