--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -15,13 +15,13 @@ import FileTree from '~/components/FileTree.astro'
 
 ### Prerequisites
 
-- A Firebase project with a web app configured and email/password authentication enabled: Read the [Firebase docs](https://firebase.google.com/docs/web/setup) for more information on how to create a new project and configure a web app. Once your project is created, you can enable email/password authentication in the Firebase console under Authentication > Sign-in method.
-- An Astro project with server-side rendering (SSR) enabled: Check our [server-side rendering](/en/guides/server-side-rendering/#enabling-ssr-in-your-project) page for more information.
+- A [Firebase project with a web app configured](https://firebase.google.com/docs/web/setup) and email/password authentication enabled in the Firebase console under Authentication > Sign-in method.
+- An Astro project with [server-side rendering (SSR)](/en/guides/server-side-rendering/#enabling-ssr-in-your-project).
 - Firebase credentials: You will need two sets of credentials to connect Astro to Firebase:
-  - Web app credentials: These credentials will be used by the client side of your app. You can find them in the Firebase console under Project settings > General, scroll down to the "Your apps" section and click on the "Web app" icon.
+  - Web app credentials: These credentials will be used by the client side of your app. You can find them in the Firebase console under Project settings > General. Scroll down to the "Your apps" section and click on the "Web app" icon.
   - Project credentials: These credentials will be used by the server side of your app. You can generate them in the Firebase console under Project settings > Service accounts > Firebase Admin SDK > Generate new private key.
 
-### Setting up credentials
+### Adding Firebase credentials
 
 To add your Firebase credentials to Astro, create an `.env` file in the root of your project with the following variables:
 
@@ -37,9 +37,9 @@ FIREBASE_AUTH_CERT_URL=YOUR_AUTH_CERT_URL
 FIREBASE_CLIENT_CERT_URL=YOUR_CLIENT_CERT_URL
 ```
 
-Now, you should be able to use these environment variables in your project. 
+Now, these environment variables are available for use in your project. 
 
-If you would like to have IntelliSense for your Firebase environment variables, create an `env.d.ts` file in the `src/` directory and configure your types like this:
+If you would like to have IntelliSense for your Firebase environment variables, edit or create the file `env.d.ts` in your `src/` directory and configure your types:
 
 ```ts title="src/env.d.ts"
 interface ImportMetaEnv {
@@ -51,7 +51,7 @@ interface ImportMetaEnv {
   readonly FIREBASE_AUTH_URI: string;
   readonly FIREBASE_TOKEN_URI: string;
   readonly FIREBASE_AUTH_CERT_URL: string
-  readonly FIREBASE_CLIENT_CERT_URL: stirng;
+  readonly FIREBASE_CLIENT_CERT_URL: string;
 }
 
 interface ImportMeta {
@@ -63,7 +63,7 @@ interface ImportMeta {
 Read more about [environment variables](/en/guides/environment-variables/) and `.env` files in Astro.
 :::
 
-Your root directory should now include these new files:
+Your project should now include these new files:
 
 <FileTree title="Project Structure">
 - src/
@@ -99,10 +99,9 @@ To connect Astro with Firebase, install the following packages using the single 
   </Fragment>
 </PackageManagerTabs>
 
-Next, create a folder named `firebase` in the `src/` directory. 
-Inside the `firebase` folder create two files, `client.ts` and `server.ts`.
+Next, create a folder named `firebase` in the `src/` directory and add two new files to this folder: `client.ts` and `server.ts`.
 
-The `client.ts` file will contain the code to initialize Firebase in the client using your web app credentials and the `firebase` package.
+In `client.ts`, add the following code to initialize Firebase in the client using your web app credentials and the `firebase` package:
 
 ```ts title="src/firebase/client.ts"
 import { initializeApp } from "firebase/app";
@@ -120,10 +119,10 @@ export const app = initializeApp(firebaseConfig);
 ```
 
 :::note
-Do not forget to replace the `firebaseConfig` object with your own web app credentials.
+Remember to replace the `firebaseConfig` object with your own web app credentials.
 :::
 
-The `server.ts` file will contain the code to initialize Firebase in the server using your project credentials and the `firebase-admin` package.
+In `server.ts`, add the following code to initialize Firebase in the server using your project credentials and the `firebase-admin` package:
 
 ```ts title="src/firebase/server.ts"
 import type { ServiceAccount } from "firebase-admin";
@@ -148,10 +147,10 @@ export const app = initializeApp({
 ```
 
 :::note
-Do not forget to replace the `serviceAccount` object with your own project credentials.
+Remember to replace the `serviceAccount` object with your own project credentials.
 :::
 
-Finally, your root directory should now include these new files:
+Finally, your project should now include these new files:
 
 <FileTree title="Project Structure">
 - src
@@ -166,15 +165,15 @@ Finally, your root directory should now include these new files:
 
 ### Setting up server endpoints
 
-To set up authentication in Astro, we will use [Astro server endpoints](/en/core-concepts/endpoints/) to create three server endpoints:
+Firebase authentication in Astro requires the following three [Astro server endpoints](/en/core-concepts/endpoints/):
 
 - `GET /api/auth/signin` - to sign in a user
 - `GET /api/auth/signout` - to sign out a user
 - `POST /api/auth/register` - to register a user
 
-To better organize our endpoints, we will create a folder named `auth` inside the `api` folder. Inside the `auth` folder, we will store all the endpoints related to authentication.
+Create three endpoints related to authentication in a new directory `src/pages/api/auth/`: `signin.ts`, `signout.ts` and `register.ts`.
 
-Create a file named `signin.ts` inside the `pages/api/auth/` folder. This file will contain the code to sign in a user using Firebase.
+`signin.ts` contains the code to sign in a user using Firebase:
 
 ```ts title="src/pages/api/auth/signin.ts"
 import type { APIRoute } from "astro";
@@ -227,7 +226,7 @@ export const get: APIRoute = async ({ request, cookies, redirect }) => {
 This is a basic implementation of the login endpoint. You can add more logic to this endpoint to suit your needs.
 :::
 
-Next, create a file named `signout.ts` inside the `auth` folder. This file will contain the code to log out a user by deleting the session cookie.
+`signout.ts` contains the code to log out a user by deleting the session cookie:
 
 ```ts title="src/pages/api/auth/signout.ts"
 import type { APIRoute } from "astro";
@@ -244,7 +243,7 @@ export const get: APIRoute = async ({ redirect, cookies }) => {
 This is a basic implementation of the logout endpoint. You can add more logic to this endpoint to suit your needs.
 :::
 
-Next, create a file named `register.ts` inside the `auth` folder. This file will contain the code to register a user using Firebase.
+`register.ts` contains the code to register a user using Firebase:
 
 ```ts title="src/pages/api/auth/register.ts"
 import type { APIRoute } from "astro";
@@ -292,7 +291,7 @@ export const post: APIRoute = async ({ request, redirect }) => {
 This is a basic implementation of the register endpoint. You can add more logic to this endpoint to suit your needs.
 :::
 
-Finally, your project directory should now include these new files:
+After creating server endpoints for authentication, your project directory should now include these new files:
 
 <FileTree title="Project Structure">
 - src
@@ -315,11 +314,12 @@ Finally, your project directory should now include these new files:
 
 Now that we have authentication endpoints set up, we can create the pages that will use them. We will create three new pages:
 
-- `pages/register` - will contain a form to register a user
-- `pages/dashboard` - will contain a dashboard that can only be accessed by authenticated users
-- `pages/signin` - will contain a form to sign in a user
+- `src/pages/register` - will contain a form to register a user
+- `src/pages/signin` - will contain a form to sign in a user
+- `src/pages/dashboard` - will contain a dashboard that can only be accessed by authenticated users
 
-Create a file named `register.astro` inside the `pages` folder.
+
+The example `src/pages/register.astro` below includes a form that will send a `POST` request to the `/api/auth/register` endpoint. This endpoint will create a new user using the data from the form and then will redirect the user to the `/signin` page.
 
 ```astro title="src/pages/register.astro"
 ---
@@ -340,46 +340,12 @@ import Layout from "../layouts/Layout.astro";
 </Layout>
 ```
 
-The markup of the page contains a form that will send a `POST` request to the `/api/auth/register` endpoint. The endpoint will create a new user using the data from the form and redirect the user to the `/signin` page.
 
-Next, create a file named `dashboard.astro` inside the `pages` folder.
+`src/pages/signin.astro` uses the Firebase server app to verify the user's session cookie. If the user is authenticated, the page will redirect the user to the `/dashboard` page.
 
-```astro title="src/pages/dashboard.astro"
----
-import { app } from "../firebase/server";
-import { getAuth } from "firebase-admin/auth";
-import Layout from "../layouts/Layout.astro";
+The example page below contains a form that will send a `POST` request to the `/api/auth/signin` endpoint with the ID token generated by the Firebase client app.
 
-const auth = getAuth(app);
-
-/* Check current session */
-const sessionCookie = Astro.cookies.get("session").value;
-
-if (!sessionCookie) {
-  return Astro.redirect("/signin");
-}
-const decodedCookie = await auth.verifySessionCookie(sessionCookie);
-const user = await auth.getUser(decodedCookie.uid);
-
-if (!user) {
-  return Astro.redirect("/signin");
-}
----
-<Layout title="dashboard">
-	<h1>Welcome {user.displayName}</h1>
-	<p>We are happy to see you here</p>
-  <form action="/api/auth/signout">
-    <button type="submit">Sign out</button>
-  </form>
-</Layout>
-</html>
-```
-
-In the frontmatter of the page, using the Firebase server app we verify the user's session cookie. If the user is not authenticated, the page will redirect the user to the `/signin` page.
-
-In the markup of the page, we display the user's name and a button to sign out. The button will send a `GET` request to the `/api/auth/signout` endpoint. The endpoint will delete the user's session cookie and redirect the user to the `/signin` page.
-
-Finally, create a file named `signin.astro` inside the `pages` folder.
+The endpoint will verify the ID token and create a new session cookie for the user. Then, the endpoint will redirect the user to the `/dashboard` page.
 
 ```astro title="src/pages/signin.astro"
 ---
@@ -442,19 +408,56 @@ if (sessionCookie) {
 </script>
 ```
 
-In the frontmatter of the page, using the Firebase server app we verify the user's session cookie. If the user is authenticated, the page will redirect the user to the `/dashboard` page.
+`src/pages/dashboard.astro` will verify the user's session cookie using the Firebase server app. If the user is not authenticated, the page will redirect the user to the `/signin` page.
 
-The markup contains a form that will send a `POST` request to the `/api/auth/signin` endpoint with the ID token generated by the Firebase client app.
+The example page below display the user's name and a button to sign out. Clicking the button will send a `GET` request to the `/api/auth/signout` endpoint.
 
-The endpoint will verify the ID token and create a new session cookie for the user. Then, the endpoint will redirect the user to the `/dashboard` page.
+The endpoint will delete the user's session cookie and redirect the user to the `/signin` page.
+
+```astro title="src/pages/dashboard.astro"
+---
+import { app } from "../firebase/server";
+import { getAuth } from "firebase-admin/auth";
+import Layout from "../layouts/Layout.astro";
+
+const auth = getAuth(app);
+
+/* Check current session */
+const sessionCookie = Astro.cookies.get("session").value;
+
+if (!sessionCookie) {
+  return Astro.redirect("/signin");
+}
+const decodedCookie = await auth.verifySessionCookie(sessionCookie);
+const user = await auth.getUser(decodedCookie.uid);
+
+if (!user) {
+  return Astro.redirect("/signin");
+}
+---
+<Layout title="dashboard">
+	<h1>Welcome {user.displayName}</h1>
+	<p>We are happy to see you here</p>
+  <form action="/api/auth/signout">
+    <button type="submit">Sign out</button>
+  </form>
+</Layout>
+</html>
+```
+
 
 ### Adding OAuth providers
 
-To add OAuth providers to your app, you need to enable them in the Firebase console. Go to the **Authentication** section and click on the **Sign-in method** tab. Then, click on the **Add a new provider** button and enable the providers you want to use.
+To add OAuth providers to your app, you need to enable them in the Firebase console. 
 
-In this example we will enable the **Google** provider. In the **Sign-in method** tab, click on the **Google** provider and click on the **Enable** toggle. Then, click on the **Save** button.
+In the Firebase console, go to the **Authentication** section and click on the **Sign-in method** tab. Then, click on the **Add a new provider** button and enable the providers you want to use.
 
-Next, we will edit the `signin.astro` page to add a button to sign in with Google and a script to handle the sign in process.
+The example below uses the **Google** provider.
+
+
+Edit the `signin.astro` page to add:
+- a button to sign in with Google underneath the existing form
+- an event listener on the button to handle the sign in process in the existing `<script>`.
 
 ```astro title="src/pages/signin.astro" ins={27, 34, 35, 65-78}
 ---
@@ -538,7 +541,7 @@ if (sessionCookie) {
 </script>
 ```
 
-The google sign in button will open a popup window to sign in with Google. Once the user signs in, it will send a `POST` request to the `/api/auth/signin` endpoint with the ID token generated by OAuth provider. 
+When clicked, the Google sign in button will open a popup window to sign in with Google. Once the user signs in, it will send a `POST` request to the `/api/auth/signin` endpoint with the ID token generated by OAuth provider. 
 
 The endpoint will verify the ID token and create a new session cookie for the user. Then, the endpoint will redirect the user to the `/dashboard` page.
 
