--- a/src/content/docs/en/tutorial/3-components/4.mdx
+++ b/src/content/docs/en/tutorial/3-components/4.mdx
@@ -170,7 +170,9 @@ Instead of writing your JavaScript directly on each page, you can move the conte
           document.querySelector('.nav-links').classList.toggle('expanded');
         });
 
-        import "../scripts/menu.js";
+        <script>
+          import "../scripts/menu.js";
+        </script>
       </script>
     </body>
     ```
