Apply suggestions from code review
Co-authored-by: Paul Valladares <85648028+dreyfus92@users.noreply.github.com>
Co-authored-by: Waxer59 <78129249+Waxer59@users.noreply.github.com>

--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -15,7 +15,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Crear un componente de pie de página
+  - Crea un componente de pie de página
   - Crear y pasar props a un componente de redes sociales
 </PreCheck>
 
