--- a/src/content/docs/es/tutorial/5-astro-api/3.mdx
+++ b/src/content/docs/es/tutorial/5-astro-api/3.mdx
@@ -18,7 +18,7 @@ Ahora que tienes páginas individuales para cada etiqueta, vamos a crear enlaces
 
 <PreCheck>
   - Agregar una nueva página utilizando el patrón de enrutamiento `/my-folder/index.astro`
-  - Mostrar una lista de todas sus etiquetas únicas, con enlaces a cada página de etiquetas
+  - Muestra una lista de todas sus etiquetas únicas, con enlaces a cada página de etiquetas
   - Actualizar tu sitio con enlaces de navegación a esta nueva página de etiquetas
 </PreCheck>
 
