--- a/src/content/docs/es/tutorial/1-setup/2.mdx
+++ b/src/content/docs/es/tutorial/1-setup/2.mdx
@@ -17,7 +17,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 <PreCheck>
   - Ejecutar el asistente de configuración `create astro` para crear un nuevo proyecto Astro
-  - Iniciar el servidor Astro en modo de desarrollo (dev)
+  - Inicia el servidor Astro en modo de desarrollo (dev)
   - Ver una vista previa en directo de tu sitio web en tu navegador
 </PreCheck>
 
