--- a/src/content/docs/es/tutorial/3-components/1.mdx
+++ b/src/content/docs/es/tutorial/3-components/1.mdx
@@ -19,7 +19,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 Ahora que tienes el mismo HTML escrito en varias páginas de tu sitio Astro, ¡vamos a sustituir ese contenido duplicado por un componente de Astro reutilizable!
 
 <PreCheck>
-  - Crear una nueva carpeta para los componentes
+  - Crea una nueva carpeta para los componentes
   - Crear un componente Astro para mostrar tus enlaces de navegación
   - Sustituir el HTML existente por un nuevo componente de navegación reutilizable
 </PreCheck>
