--- a/src/content/docs/es/tutorial/3-components/2.mdx
+++ b/src/content/docs/es/tutorial/3-components/2.mdx
@@ -15,7 +15,7 @@ import PreCheck from '~/components/tutorial/PreCheck.astro';
 
 
 <PreCheck>
-  - Crea un componente de pie de página
+  - Crear un componente de pie de página
   - Crear y pasar props a un componente de redes sociales
 </PreCheck>
 
