Correct middleware docs (see withastro/astro#7010)

--- a/src/content/docs/en/guides/middleware.mdx
+++ b/src/content/docs/en/guides/middleware.mdx
@@ -45,10 +45,13 @@ To enable using the CLI instead, you can use the `--experimental-middleware` fla
 2. Inside this file, export an [`onRequest()`](#onrequest) function. This must not be a default export.
 
 ```js title="src/middleware.js"
-export function onRequest ({ locals, request }) {
+export function onRequest ({ locals, request }, next) {
 	// intercept response data from a request
   // optionally, transform the response by modifying `locals`
   locals.title = "New title"
+
+  // return a Response or the result of calling `next()`
+  return next()
 };
 ```
 
@@ -149,7 +152,7 @@ This is the same `context` object that is passed to API routes.
 
 A function that intercepts (reads and modifies) the `Response` of a `Request` or calls the "next" middleware in the chain and returns a `Response`. For example, this function could modify the HTML body of a response.
 
-This is an optional argument of `onRequest()`; however, your middleware **must** either return a `Response` or call `next()`.
+This is an optional argument of `onRequest()`; however, your middleware **must** either return a `Response` or the result of calling `next()`
 
 
 ### `locals`
