--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -1,6 +1,6 @@
 ---
 title: Firebase & Astro
-description: Add a backend to your project with Supabase
+description: Add a backend to your project with Firebase
 type: backend
 service: Firebase
 stub: true
