--- a/src/content/docs/ko/core-concepts/project-structure.mdx
+++ b/src/content/docs/ko/core-concepts/project-structure.mdx
@@ -14,7 +14,7 @@ import FileTree from '~/components/FileTree.astro'
 Astro는 프로젝트에 고유한 디렉터리 구성을 사용합니다. 모든 Astro 프로젝트의 최상위에는 다음과 같은 디렉터리와 파일이 포함되어야 합니다.
 
 - `src/*` - 당신의 프로젝트 소스 코드 (컴포넌트, 페이지, 스타일 등)
-- `public/*` - 소스 코드가 아니거나 처리할 필요가 없는 에셋 파일들 (폰트, 아이콘 등)
+- `public/*` - 소스 코드가 아니거나 처리되지 않은 에셋 파일들 (폰트, 아이콘 등)
 - `package.json` - 프로젝트 매니페스트
 - `astro.config.mjs` - Astro의 설정 파일 (권장)
 - `tsconfig.json` - TypeScript 설정 파일 (권장)
