add links, standardize spellings

--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -14,10 +14,10 @@ import FileTree from '~/components/FileTree.astro';
 ## Integrating with Astro
 
 :::note
-Builder.io can connect to your app in various ways. If You are using a JavaScript **framework** like Svelte, Vue, or React in your Astro project you can use one of builder.io's integrations [xxx].
+Builder can connect to your app in various ways. If You are using a JavaScript **framework** like Svelte, Vue, or React in your Astro project you can use [one of Builder's integrations](xxx).
 :::
 
-In this guide, you will use [Builder's REST API](xxx) to fetch your content. This way, things stay simple - your project doesn't need to use a framework or any client-side JavaScript at all. 
+In this guide, you will use connect to your Astro project via [Builder's REST API](xxx). This way, things stay simple - your project doesn't need to use a framework or any client-side JavaScript at all. 
 
 You'll fetch your content at buld time, when Astro is generating your site. Later in this guide [xxx], You'll use webhooks to connect Builder to your hosting provider like Netlify or Vercel. That way, each time you'll make an edit in the Builder app your site gets automatically rebuilt.
 
@@ -25,28 +25,32 @@ You'll fetch your content at buld time, when Astro is generating your site. Late
 
 To get started, you will need to have the following:
 
-0a. ??? *A basic knowledge of using a code editor / the command line* - You can read a beginner-friendly introduction here []
+0a. ??? *A basic knowledge of using a code editor / the command line* - You can read a beginner-friendly introduction here [https://www.tatianamac.com/posts/beginner-eleventy-tutorial-partii/#1a.-terminal-emulator]
 
 0b. ??? *A basic knowledge of REST APIs*
 
-1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time - whether you want to start from scratch or use a template. 
+1. **An Astro project** - If you don't have an Astro project yet, our [Installation guide](/en/install/auto/) will get you up and running in no time. 
 
-2. **A builder.io account and space** - If you don't have an account yet, [sign up for free](xxx) and create a new space.
+2. **A builder.io account and space** - If you don't have an account yet, [sign up for free](https://www.builder.io/) and create a new space.
 
 3. **A builder.io API key** - This key will be used to fetch your content and the HTML you create in the Builder editor. [Here's](https://www.builder.io/c/docs/using-your-api-key) Builder's guide how to find it. 
 
-4. A basic understanding of builder - models, sections, preview URL and the REST API. [xxx] [xxx]
+4. A basic understanding of Builder - models, sections, preview URL and the REST API. [xxx] [xxx]
 
 ### Setting up credentials
-At the time of writing, the key for the Builder API we use here is public [xxx] - so you don't have to worry about hiding or encrypting it. 
-
-You could paste it into your API call directly, but since we'll be making a few of these calls, it makes sense to put it in a separate file that we can access from multiple places. 
 
 To add your Builder credentials to Astro, create a `.env` file in the root of your project with the following variable:
 
 ```ini title=".env"
 BUILDER_API_PUBLIC_KEY=YOUR_KEY
 ```
+
+:::note
+At the time of writing, the key for the Builder API we use here is public [xxx] - so you don't have to worry about hiding or encrypting it. 
+:::
+
+You could paste it into your API call directly, but since we'll be making a few of these calls, it makes sense to put it in a separate file that we can access from multiple places. 
+
 
 Now, you should be able to use this environment variable in your project.
 
@@ -60,15 +64,19 @@ Your root directory should now include this new file:
 </FileTree>
 
 ### Configuring Builder
-Create or pick an existing model that you'll use to build your site. This guide uses a section model [xxx] representing a blog post. 
+Create or pick an existing model that you'll use to build your site. This guide uses a [section model](xxx) representing a blog post. 
 
 #### Connecting the Preview URL 
 
+:::info
+[If you want to dig in, read more about the preview URL in the Builder docs](https://www.builder.io/c/docs/html-api#previewing-content-on-your-site).
+:::
+
 To use Builder's drag-and-drop editor, you'll create a page that returns the special `<builder-coponent>`. This component tells Builder where to insert the content from its CMS - it represents the portion of the page that's editable in the Builder app. 
 
-In this guide the `<builder-coponent>` represents the content of a blog post. Accordingly, we wrap it in our `<BaseLayout>` to simulate how it would look on the final page. 
+In this guide the `<builder-component>` represents the content of a blog post. Accordingly, we wrap it in our `<BaseLayout>` to simulate how it would look on the final page.
 
-1. Create a file named `builder-preview.astro` in your `/src` folder.  
+1. Create a file named `builder-preview.astro` in your `/src` folder with the following content:
 
 ```astro title="builder-preview.astro"
 ---
@@ -79,30 +87,34 @@ const builderModel = import.meta.env.BUILDER_BLOGPOST_MODEL;
 ---
 
 <BaseLayout>
+    <header>
+      Here be a header
+    </header>
+
     <builder-component model={builderModel} api-key={builderAPIpublicKey}
     ></builder-component>
     <script async src="https://cdn.builder.io/js/webcomponents"></script>
+
+    <footer>
+      Here be a footer
+    </footer>
 </BaseLayout>
 ```
 
-:::info
-Read more about the preview-URL in the builder docs. [xxx]
-:::
-
-2. Set a preview URL in your model [xxx] - in this project it is `https://localhost:3000/builder-preview`. Don't forget the `https` part! Read more about preview URLs in the Builder docs [xxx]
+2. Set a preview URL in your model [xxx] - in this project it is `https://localhost:3000/builder-preview`. Don't forget the `https` part! 
 
 :::note
-We picked `localhost:3000` since this is the address where we are developing our project. Later, when our site is deployed, we will change our preview-URL to match our production URL like `https://myBlog.com/builder-preview`.
+We picked `localhost:3000` since this is the address where we are developing our project. Later, when our site is deployed, we will change our preview URL to match our production URL like `https://myBlog.com/builder-preview`.
 :::
 
-Now when you go to the Builder app preview (read here how to do that - go to content and create new->Blogpost) you should see your `<BaseLayout>` with a big inviting space in between!
+Now when you go to the Builder app preview (read [here](xxx) how to do that - go to content and create new->Blogpost) you should see your `<BaseLayout>` with a big inviting space in between!
 
-[screenshot]
+[screenshot]xxx
 
 :::tip
 **Troubleshooting**
 
-Things can easily go wrong when setting up the preview. If the preview doesn't work, you can try one of the following things:
+Things can sometimes go wrong when setting up the preview. If the preview doesn't work, you can try one of the following things:
 * Make sure that the routes match exactly - your Astro route and the one in your Builder preview-URL. Watch out for typos!
 * Make sure you include the full URL including the protocol (like `https://`)
 * Make sure the site is live -  
@@ -110,9 +122,9 @@ Things can easily go wrong when setting up the preview. If the preview doesn't w
 Read Builder's troubleshooting guide for more help. [xxx]
 :::
 
-#### Fetching your Data
+#### Fetching data
 
-To fetch your data from the builder CMS, you can simply make a fetch request to one of Builder's REST APIs. 
+To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). To fetch your data from the Builder CMS, you can simply make a fetch request to one of Builder's REST APIs. 
 
 Which API should You use? It depends on what kind of data you'd like to fetch:
 
