--- a/src/content/docs/en/guides/cms/builderio.mdx
+++ b/src/content/docs/en/guides/cms/builderio.mdx
@@ -123,6 +123,7 @@ Read Builder's troubleshooting guide for more help. [xxx]
 :::
 
 #### Fetching data
+(xxx work on this --- simplify)
 
 To test this setup, create a new piece of content for the [section model you've set up in step 3](configuring builder). To fetch your data from the Builder CMS, you can simply make a fetch request to one of Builder's REST APIs. 
 
@@ -243,10 +244,17 @@ By the end of this guide you'll have a website that
 
 2. **An Astro project integrated with Builder** - See [integrating with Astro](#integrating-with-astro) for instructions on how to set up the integration.
 
-### Creating A Base Layout
-Create a layout for the whole page. Your future blog posts that you'll create via the Builder app will go into the `<slot />`.
 
-Here we are using the `BaseLayout` as we left it at the end of our getting started with Astro tutorial [xxx]. The 
+### Creating A Base Layout
+Create a layout for a single blog post. Here we are using the `BaseLayout` as we left it at the end of our getting started with Astro tutorial [xxx].
+
+The idea here is to have the content of the <Header> and <Footer> come from Astro files, while the blog post will go into the <slot>. You'll create a blog post via the Builder app in the next step. 
+
+:::note
+This is one workflow among many. It demonstrates how You could split up the development of a site - the writers can design posts using Builder's visual interface, while other teams can handle more perennial or technical stuff. 
+Feel free to experiment with other set ups and find one that suits your team's needs!
+:::
+
 
 ```astro title='/src/layouts/BaseLayout'
 ---
@@ -279,44 +287,45 @@ const { pageTitle } = Astro.props;
 
 ### Creating a Blogpost Model
 
-Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model.
+Follow [Builder's official tutorial](https://www.builder.io/blog/creating-blog) for creating a blog post model - it haas gifs!
 
 In short, to create a model for your blogpost go to the Builder app and click on the **Models** tab. Click on the <kbd>+ Create Model</kbd> button and create a model of the type `section`. A section model means that the content can sit between other elements of a page - like the header and footer that are part of our `<BaseLayout>`! 
 
-1. `blogPost` - A content type Blok with the following fields:
+In that new model add some fields. This will be the data related to a blog post (without the written content). You can add whatever fields You like. For this tutorial we'll keep it simple:
 
    - `title` - A text field
-   - `description` - A text field
+   - `image` - A file field
    - `slug` - A text field
 
 ### Creating content
 
-To add new content, go to the content section by clicking in the **Content** tab. Using the Blok library that you created in the previous step, create the following stories:
+To add new content, go to the content section by clicking in the **Content** tab. Click on *new* and choose the model for your blogpost. If You followed the steps under [integrating with Astro] and everything worked, you should see something like this: 
 
-1. `home` - A content type story with the `page` Blok. Inside the `body` field, add a `blogPostList` Blok.
+[screenshot with empty blogpost]
 
-2. `blog/no-javascript` - A story with the `blogPost` content type inside the blog folder.
-   ```yaml
-   title: No JavaScript
-   description: A sample blog post
-   content: Hi there! This blog post doesn't use JavaScript.
-   ```
-3. `blog/astro-is-amazing` - A story with the `blogPost` content type inside the blog folder.
-   ```yaml
-   title: Astro is amazing
-   description: We love Astro
-   content: Hi there! This blog post was build with Astro.
-   ```
+xxx
+NOTE TO SELF
+* explain how to structure the data of a blogpost? - what to put in a data field and what to put directly via Builder's drag and drop?
+*** might make more sense to work with components here?
+xxx
+
+The data fields you've just created are in the panel on the right under the *options* tab. Fill those in and then add some content to your post! To do that, click on the *+ Add Block* button and add whatever you want - maybe a text field with some text to start with. Here is where you can use the full power of Builder's drag and drop editor and design your blog post to your heart's contents!  
+
+xxx
+NOTE TO SELF
+* following storyblok tutorial this would all be pre-given content and less of a suggestion
+* mb suggest creating a second blog post so we can show the listing of posts later a little more clearly
+xxx
 
 Now that you have your content ready, return to your Astro project and start building your blog.
 
-### Connecting Bloks to components
+### Connecting models to components
 
-To connect your newly created Bloks to Astro components, create a new folder named `storyblok` in your `src` directory and add the following files:
+To connect your newly created blog model to your Astro project, create a new folder named `pages` in your `src` directory, a `posts` folder within that and add the following files:
 
-`Page.astro` is a nestable Block content type component that will recursively render all the Bloks inside the `body` property of the `page` Blok. It also adds the `storyblokEditable` attributes to the parent element which will allow us to edit the page in Storyblok.
+`[...slug].astro` stands for each blog post. It uses Astro's spread syntax() and creates a new route for each blog post. First, it fetches a list of all the slugs using Builder's ... API. Then it takes each slug and queries the API for the HTML of the matching blog post. This HTML is the stuff you put on the page when you used Builder's drag and drop editor!    
 
-```astro title="src/storyblok/Page.astro"
+```astro title="src/pages/posts/[...slug].astro"
 ---
 import { storyblokEditable } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
